Projeto 3° Trimestre PC 2025 Gabriel Fogaça

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="cenario-passo0.png" alt="">
+            <img src="desenho-animado-museu.jpg" alt="">
             <p>Você é um explorador viajando pela Inglaterra, você acaba de encontrar um museu abandonado e decide entrar. Explorar o andar principal ou subsolo ?</p>
             <button class="btn-proximo" data-proximo="1">Andar principal</button>
             <button class="btn-proximo" data-proximo="2">Subsolo</button>
